Warn on unsaved serttings, add screenshot

--- a/options.html
+++ b/options.html
@@ -199,6 +199,9 @@
     </table>
     <div style="margin-top: 15px;">
       <button id="addMapping" class="small">+ Add Mapping</button>
+      <button id="exportConfig" class="small secondary">Export to File</button>
+      <button id="importConfig" class="small secondary">Import from File</button>
+      <input type="file" id="fileInput" accept=".json" style="display: none;">
     </div>
   </div>
 
